JF-2008-10-16-0: Enhancem.:  Fixed changelog JF-2008-09-03-0

DG-2008-10-15-0: Enhancem.:  Added test scenario to issue_1741. 
                 Review:     EB

TB-2008-10-15-0: Bugfix:     Fixed failing hedeby test for issue 551
                 Enhancem.:  o same test: changed to use a ctx variable
                             o same test: improved to pick a random ge_adapter
                 Review:     RH

DG-2008-10-14-0: Bugfix:     Added complementary tests for issue_1741. 
                             Fix for del_queue function (didn't propagate 
                             raise_error variable).
                 Review:     CR

RH-2008-10-14-0: Bugfix:     Hedeby: fix of issue 539 required adjustments in ca_reload test
                 Cleanup:    Hedeby: ge unassigne_resource test uses "opt" methods
                 Review:     TB

TB-2008-10-13-1: Bugfix:     o fixed hedeby test minResource
                             o fixed produce_/reset_* hedeby util
                               functions
                 Enhancem.:  o added hedeby util function
                               get_hedeby_current_services()
                 Cleanup:    o refactored hedeby create_XXX_and_filter() functions
                 Review:     RH

TB-2008-10-13-0: Bugfix:    Fixed bug in set_execd_install_params() used in
                            test for hedeby issue 571
                 Cleanup:   o hedeby issue_571: introduced context variable alias
                 Review:    RH

MB-2008-10-11-0: Bugfix:    Updated hedeby tests (because of fix of issue 544)
                 Review:    RH,AF,TB

JG-2008-10-10-0: Enhancem.: Cleanup and partly rewrite of
                            system_tests/config/submit_hosts.
                 Review:    DG

JG-2008-10-08-0: Enhancem.: New check for IZ 2737 in functional/access_lists.
                 Review:    CR

JG-2008-10-08-0: Bugfix:    Fixed bugs/issuezilla/2328
                 Review:    CR
