@@ -1,0 +1,133 @@
+#!/vol2/TCL_TK/glinux/bin/expect
+#___INFO__MARK_BEGIN__
+##########################################################################
+#
+#  The Contents of this file are made available subject to the terms of
+#  the Sun Industry Standards Source License Version 1.2
+#
+#  Sun Microsystems Inc., March, 2001
+#
+#
+#  Sun Industry Standards Source License Version 1.2
+#  =================================================
+#  The contents of this file are subject to the Sun Industry Standards
+#  Source License Version 1.2 (the "License"); You may not use this file
+#  except in compliance with the License. You may obtain a copy of the
+#  License at http://gridengine.sunsource.net/Gridengine_SISSL_license.html
+#
+#  Software provided under this License is provided on an "AS IS" basis,
+#  WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING,
+#  WITHOUT LIMITATION, WARRANTIES THAT THE SOFTWARE IS FREE OF DEFECTS,
+#  MERCHANTABLE, FIT FOR A PARTICULAR PURPOSE, OR NON-INFRINGING.
+#  See the License for the specific provisions governing your rights and
+#  obligations concerning the Software.
+#
+#  The Initial Developer of the Original Code is: Sun Microsystems, Inc.
+#
+#  Copyright: 2001 by Sun Microsystems, Inc.
+#
+#  All Rights Reserved.
+#
+##########################################################################
+#___INFO__MARK_END__
+
+
+
+# define global variable in this namespace
+global check_name 
+global check_category 
+global check_description 
+global check_needs
+global check_functions 
+global check_highest_level
+global check_init_level_procedure
+global check_root_access_needs
+
+set check_root_access_needs "yes"
+
+# define a level initialization procedure:
+set check_init_level_procedure "issue_2753_init_level"
+
+# define test's name and run level descriptions
+set check_name            "issue_2753"
+set check_category        "COMPATIBILITY SYSTEM VERIFIED"
+set check_highest_level   0
+set check_description(0)  "testing behaviour of spooldefaults binary with missing bootstrap file"
+
+# define test's dependencies
+set check_needs           "init_core_system" 
+
+# setup and cleanup functions
+set check_setup_function issue_2753_setup
+set check_cleanup_function issue_2753_cleanup
+
+# define test's procedure order
+set check_functions {}
+lappend check_functions "issue_2753_test1"
+
+proc issue_2753_init_level {} {
+   global CHECK_ACT_LEVEL
+
+   switch -- $CHECK_ACT_LEVEL {
+      0 -
+      1 {
+         return 0
+      }
+   }
+
+   return -1  ;# no other level
+}
+
+# -------- local test procedures: initialization------------------------------
+
+proc issue_2753_setup {} {
+   global ts_config
+   global issue_2753_hosts issue_2753_backup
+
+   # let's assume we need 2 test hosts
+   set issue_2753_hosts [host_conf_get_suited_hosts 2]
+
+   # we want to modify the global config - make a backup
+   get_config issue_2753_backup
+
+}
+
+proc issue_2753_cleanup {} {
+   global ts_config
+   global issue_2753_hosts issue_2753_backup
+
+   delete_all_jobs
+   wait_for_end_of_all_jobs
+
+   # restore config
+   set_config issue_2753_backup
+
+   # unset our test's global variables
+   foreach var "issue_2753_hosts issue_2753_backup" {
+      if {[info exists $var]} {
+         unset $var
+      }
+   }
+}
+
+
+proc issue_2753_test1 {} {
+   global ts_config CHECK_USER
+   global issue_2753_hosts
+   global CHECK_ACT_LEVEL
+
+   ts_log_info "renaming boostrap file" ;#I'm doing it here and not in the setup function, because ts needs the qconf command for any reason, which is not working with a renamed bootstrap file.
+   start_remote_prog $ts_config(master_host) "root" "mv" "$ts_config(product_root)/$ts_config(cell)/common/bootstrap $ts_config(product_root)/$ts_config(cell)/common/bootstrap_save" prg_exit_state 60 0 "" "" 1 0 0 1 1
+
+   ts_log_info "starting spooldefaults binary"
+   set output [start_sge_utilbin "spooldefaults" "" $ts_config(master_host) "root" prg_exit_state 60 ""]
+
+   set ret [handle_sge_errors "issue_2753_test1" "spooldefault" $output messages 0 $prg_exit_state]
+
+   ts_log_info "renaming boostrap file back to old name";#I'm doing it here and not in the setup function, because ts needs the qconf command for any reason, which is not working with a renamed bootstrap file.
+   start_remote_prog $ts_config(master_host) "root" "mv" "$ts_config(product_root)/$ts_config(cell)/common/bootstrap_save $ts_config(product_root)/$ts_config(cell)/common/bootstrap" prg_exit_state 60 0 "" "" 1 0 0 1 1
+
+  ts_log_info "Test ok, spooldefaults binary prints a adequate error message"
+   
+}
+
